yaccfile.output
Terminals unused in grammar

    UNDERSCORE
    OR
    MOD_EQ
    BIT_AND_EQ
    BIT_OR_EQ
    BIT_XOR_EQ
    SHL_EQ
    SHR_EQ
    MOD
    METHOD_CALL
    FUNC_CALL


State 86 conflicts: 1 shift/reduce
State 87 conflicts: 1 shift/reduce
State 88 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce
State 91 conflicts: 1 shift/reduce
State 93 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 137 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 144 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce
State 146 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 151 conflicts: 1 shift/reduce
State 152 conflicts: 1 shift/reduce
State 153 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: item_list

    2 item_list: item_list item
    3          | item

    4 item: function_decl

    5 function_decl: FN IDENTIFIER func_decl_args ARROW type block_expr
    6              | FN IDENTIFIER func_decl_args block_expr

    7 func_decl_args: LPAREN func_arg_list RPAREN
    8               | LPAREN RPAREN
    9               | error

   10 func_arg_list: func_arg_list COMMA func_arg
   11              | func_arg

   12 func_arg: opt_mut IDENTIFIER COLON type

   13 stmt: SEMICOLON
   14     | let
   15     | expr_stmt SEMICOLON
   16     | print_ln SEMICOLON
   17     | item

   18 stmt_list: stmt_list stmt
   19          | stmt_list error
   20          | stmt

   21 print_ln: PRINT_LN LPAREN STR_LITERAL RPAREN

   22 type_decl: COLON type
   23          | COLON error
   24          | ε

   25 opt_mut: MUT
   26        | ε

   27 ident: IDENTIFIER

   28 let: LET opt_mut ident type_decl EQ expr SEMICOLON
   29    | LET opt_mut ident type_decl SEMICOLON

   30 if_expr: IF expr block_expr
   31        | IF expr block_expr ELSE if_expr
   32        | IF expr block_expr ELSE block_expr

   33 type_list: type_list COMMA type
   34          | type

   35 type: I8
   36     | I16
   37     | I32
   38     | I64
   39     | ISIZE
   40     | U8
   41     | U16
   42     | U32
   43     | U64
   44     | USIZE
   45     | BOOL
   46     | LPAREN type_list RPAREN
   47     | LPAREN RPAREN

   48 block_expr: LBRACE stmt_list RBRACE
   49           | LBRACE stmt_list expr RBRACE
   50           | LBRACE expr RBRACE
   51           | LBRACE RBRACE

   52 unary_op_expr: MINUS expr
   53              | STAR expr
   54              | BANG expr
   55              | AMPERSAND expr
   56              | AMPERSAND_MUT expr

   57 bin_op_expr: expr PLUS expr
   58            | expr MINUS expr
   59            | expr STAR expr
   60            | expr SLASH expr
   61            | expr L_AND expr
   62            | expr L_OR expr
   63            | expr EQEQ expr
   64            | expr NE expr
   65            | expr LT expr
   66            | expr GT expr
   67            | expr GE expr
   68            | expr LE expr
   69            | expr EQ expr
   70            | expr PLUS_EQ expr
   71            | expr MIN_EQ expr
   72            | expr DIV_EQ expr
   73            | expr MUL_EQ expr

   74 literal: DEC_LITERAL
   75        | STR_LITERAL
   76        | FLOAT_LITERAL
   77        | TRUE
   78        | FALSE

   79 call_expr_args: call_expr_args COMMA expr
   80               | expr

   81 call_expr: IDENTIFIER LPAREN call_expr_args RPAREN
   82          | IDENTIFIER LPAREN RPAREN

   83 while_expr: WHILE expr block_expr

   84 tuple_index_expr: expr DOT DEC_LITERAL

   85 expr: expr_w_block
   86     | expr_wo_block

   87 expr_list: expr_list COMMA expr
   88          | expr

   89 expr_stmt: expr_w_block
   90          | expr_wo_block

   91 expr_w_block: while_expr
   92             | if_expr
   93             | block_expr

   94 expr_wo_block: LPAREN expr RPAREN
   95              | bin_op_expr
   96              | tuple_index_expr
   97              | IDENTIFIER
   98              | unary_op_expr
   99              | LPAREN RPAREN
  100              | call_expr
  101              | RETURN expr
  102              | BREAK expr
  103              | CONTINUE
  104              | LPAREN expr_list opt_comma RPAREN
  105              | literal

  106 opt_comma: COMMA
  107          | ε


Terminals, with rules where they appear

    $end (0) 0
    error (256) 9 19 23
    DEC_LITERAL <Token> (258) 74 84
    FLOAT_LITERAL <Token> (259) 76
    STR_LITERAL <Token> (260) 21 75
    TRUE <Token> (261) 77
    FALSE <Token> (262) 78
    IDENTIFIER <Token> (263) 5 6 12 27 81 82 97
    UNDERSCORE <Token> (264)
    I8 <Token> (265) 35
    I16 <Token> (266) 36
    I32 <Token> (267) 37
    I64 <Token> (268) 38
    ISIZE <Token> (269) 39
    U8 <Token> (270) 40
    U16 <Token> (271) 41
    U32 <Token> (272) 42
    U64 <Token> (273) 43
    USIZE <Token> (274) 44
    LET <Token> (275) 28 29
    MUT <Token> (276) 25
    BOOL <Token> (277) 45
    FN <Token> (278) 5 6
    WHILE <Token> (279) 83
    PRINT_LN <Token> (280) 21
    EQ <Token> (281) 28 69
    EQEQ <Token> (282) 63
    NE <Token> (283) 64
    BANG <Token> (284) 54
    LT <Token> (285) 65
    LE <Token> (286) 68
    GT <Token> (287) 66
    GE <Token> (288) 67
    PLUS <Token> (289) 57
    MINUS <Token> (290) 52 58
    STAR <Token> (291) 53 59
    SLASH <Token> (292) 60
    COMMA <Token> (293) 10 33 79 87 106
    ARROW <Token> (294) 5
    IF <Token> (295) 30 31 32
    ELSE <Token> (296) 31 32
    RETURN <Token> (297) 101
    BREAK <Token> (298) 102
    CONTINUE <Token> (299) 103
    L_AND <Token> (300) 61
    L_OR <Token> (301) 62
    PLUS_EQ <Token> (302) 70
    MIN_EQ <Token> (303) 71
    MUL_EQ <Token> (304) 73
    DIV_EQ <Token> (305) 72
    LBRACE <Token> (306) 48 49 50 51
    RBRACE <Token> (307) 48 49 50 51
    LPAREN <Token> (308) 7 8 21 46 47 81 82 94 99 104
    RPAREN <Token> (309) 7 8 21 46 47 81 82 94 99 104
    SEMICOLON <Token> (310) 13 15 16 28 29
    COLON <Token> (311) 12 22 23
    AMPERSAND <Token> (312) 55
    OR <Token> (313)
    AMPERSAND_MUT <Token> (314) 56
    DOT <Token> (315) 84
    CONTROL_FLOW (316)
    MOD_EQ (317)
    BIT_AND_EQ (318)
    BIT_OR_EQ (319)
    BIT_XOR_EQ (320)
    SHL_EQ (321)
    SHR_EQ (322)
    MOD (323)
    BIN_OP (324)
    UMINUS (325)
    DEREF (326)
    NOT (327)
    REF (328)
    REF_MUT (329)
    UNARY (330)
    METHOD_CALL (331)
    FIELD_ACCESS (332)
    FUNC_CALL (333)
    CALL_INDEX (334)
    PATH (335)


Nonterminals, with rules where they appear

    $accept (81)
        on left: 0
    program <U<Ast>> (82)
        on left: 1
        on right: 0
    item_list <std::vector<U<Item>>> (83)
        on left: 2 3
        on right: 1 2
    item <U<Item>> (84)
        on left: 4
        on right: 2 3 17
    function_decl <U<FunDecl>> (85)
        on left: 5 6
        on right: 4
    func_decl_args <std::vector<FunArg>> (86)
        on left: 7 8 9
        on right: 5 6
    func_arg_list <std::vector<FunArg>> (87)
        on left: 10 11
        on right: 7 10
    func_arg <FunArg> (88)
        on left: 12
        on right: 10 11
    stmt <U<Stmt>> (89)
        on left: 13 14 15 16 17
        on right: 18 20
    stmt_list <std::vector<U<Stmt>>> (90)
        on left: 18 19 20
        on right: 18 19 48 49
    print_ln <U<PrintLn>> (91)
        on left: 21
        on right: 16
    type_decl <std::optional<Type>> (92)
        on left: 22 23 24
        on right: 28 29
    opt_mut <Mut> (93)
        on left: 25 26
        on right: 12 28 29
    ident <Identifier> (94)
        on left: 27
        on right: 28 29
    let <U<LetStmt>> (95)
        on left: 28 29
        on right: 14
    if_expr <U<IfElse>> (96)
        on left: 30 31 32
        on right: 31 92
    type_list <std::vector<Type>> (97)
        on left: 33 34
        on right: 33 46
    type <Type> (98)
        on left: 35 36 37 38 39 40 41 42 43 44 45 46 47
        on right: 5 12 22 33 34
    block_expr <U<BlockExpr>> (99)
        on left: 48 49 50 51
        on right: 5 6 30 31 32 83 93
    unary_op_expr <U<UnaryOpExpr>> (100)
        on left: 52 53 54 55 56
        on right: 98
    bin_op_expr <U<Expr>> (101)
        on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 95
    literal <U<Literal>> (102)
        on left: 74 75 76 77 78
        on right: 105
    call_expr_args <std::vector<U<Expr>>> (103)
        on left: 79 80
        on right: 79 81
    call_expr <U<CallExpr>> (104)
        on left: 81 82
        on right: 100
    while_expr <U<WhileLoop>> (105)
        on left: 83
        on right: 91
    tuple_index_expr <U<TupleIndexExpr>> (106)
        on left: 84
        on right: 96
    expr <U<Expr>> (107)
        on left: 85 86
        on right: 28 30 31 32 49 50 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 79 80 83 84 87 88 94 101 102
    expr_list <std::vector<U<Expr>>> (108)
        on left: 87 88
        on right: 87 104
    expr_stmt <U<Expr>> (109)
        on left: 89 90
        on right: 15
    expr_w_block <U<Expr>> (110)
        on left: 91 92 93
        on right: 85 89
    expr_wo_block <U<Expr>> (111)
        on left: 94 95 96 97 98 99 100 101 102 103 104 105
        on right: 86 90
    opt_comma (112)
        on left: 106 107
        on right: 104


State 0

    0 $accept: • program $end

    FN  shift, and go to state 1

    program        go to state 2
    item_list      go to state 3
    item           go to state 4
    function_decl  go to state 5


State 1

    5 function_decl: FN • IDENTIFIER func_decl_args ARROW type block_expr
    6              | FN • IDENTIFIER func_decl_args block_expr

    IDENTIFIER  shift, and go to state 6


State 2

    0 $accept: program • $end

    $end  shift, and go to state 7


State 3

    1 program: item_list •
    2 item_list: item_list • item

    FN  shift, and go to state 1

    $default  reduce using rule 1 (program)

    item           go to state 8
    function_decl  go to state 5


State 4

    3 item_list: item •

    $default  reduce using rule 3 (item_list)


State 5

    4 item: function_decl •

    $default  reduce using rule 4 (item)


State 6

    5 function_decl: FN IDENTIFIER • func_decl_args ARROW type block_expr
    6              | FN IDENTIFIER • func_decl_args block_expr

    error   shift, and go to state 9
    LPAREN  shift, and go to state 10

    func_decl_args  go to state 11


State 7

    0 $accept: program $end •

    $default  accept


State 8

    2 item_list: item_list item •

    $default  reduce using rule 2 (item_list)


State 9

    9 func_decl_args: error •

    $default  reduce using rule 9 (func_decl_args)


State 10

    7 func_decl_args: LPAREN • func_arg_list RPAREN
    8               | LPAREN • RPAREN

    MUT     shift, and go to state 12
    RPAREN  shift, and go to state 13

    $default  reduce using rule 26 (opt_mut)

    func_arg_list  go to state 14
    func_arg       go to state 15
    opt_mut        go to state 16


State 11

    5 function_decl: FN IDENTIFIER func_decl_args • ARROW type block_expr
    6              | FN IDENTIFIER func_decl_args • block_expr

    ARROW   shift, and go to state 17
    LBRACE  shift, and go to state 18

    block_expr  go to state 19


State 12

   25 opt_mut: MUT •

    $default  reduce using rule 25 (opt_mut)


State 13

    8 func_decl_args: LPAREN RPAREN •

    $default  reduce using rule 8 (func_decl_args)


State 14

    7 func_decl_args: LPAREN func_arg_list • RPAREN
   10 func_arg_list: func_arg_list • COMMA func_arg

    COMMA   shift, and go to state 20
    RPAREN  shift, and go to state 21


State 15

   11 func_arg_list: func_arg •

    $default  reduce using rule 11 (func_arg_list)


State 16

   12 func_arg: opt_mut • IDENTIFIER COLON type

    IDENTIFIER  shift, and go to state 22


State 17

    5 function_decl: FN IDENTIFIER func_decl_args ARROW • type block_expr

    I8      shift, and go to state 23
    I16     shift, and go to state 24
    I32     shift, and go to state 25
    I64     shift, and go to state 26
    ISIZE   shift, and go to state 27
    U8      shift, and go to state 28
    U16     shift, and go to state 29
    U32     shift, and go to state 30
    U64     shift, and go to state 31
    USIZE   shift, and go to state 32
    BOOL    shift, and go to state 33
    LPAREN  shift, and go to state 34

    type  go to state 35


State 18

   48 block_expr: LBRACE • stmt_list RBRACE
   49           | LBRACE • stmt_list expr RBRACE
   50           | LBRACE • expr RBRACE
   51           | LBRACE • RBRACE

    DEC_LITERAL    shift, and go to state 36
    FLOAT_LITERAL  shift, and go to state 37
    STR_LITERAL    shift, and go to state 38
    TRUE           shift, and go to state 39
    FALSE          shift, and go to state 40
    IDENTIFIER     shift, and go to state 41
    LET            shift, and go to state 42
    FN             shift, and go to state 1
    WHILE          shift, and go to state 43
    PRINT_LN       shift, and go to state 44
    BANG           shift, and go to state 45
    MINUS          shift, and go to state 46
    STAR           shift, and go to state 47
    IF             shift, and go to state 48
    RETURN         shift, and go to state 49
    BREAK          shift, and go to state 50
    CONTINUE       shift, and go to state 51
    LBRACE         shift, and go to state 18
    RBRACE         shift, and go to state 52
    LPAREN         shift, and go to state 53
    SEMICOLON      shift, and go to state 54
    AMPERSAND      shift, and go to state 55
    AMPERSAND_MUT  shift, and go to state 56

    item              go to state 57
    function_decl     go to state 5
    stmt              go to state 58
    stmt_list         go to state 59
    print_ln          go to state 60
    let               go to state 61
    if_expr           go to state 62
    block_expr        go to state 63
    unary_op_expr     go to state 64
    bin_op_expr       go to state 65
    literal           go to state 66
    call_expr         go to state 67
    while_expr        go to state 68
    tuple_index_expr  go to state 69
    expr              go to state 70
    expr_stmt         go to state 71
    expr_w_block      go to state 72
    expr_wo_block     go to state 73


State 19

    6 function_decl: FN IDENTIFIER func_decl_args block_expr •

    $default  reduce using rule 6 (function_decl)


State 20

   10 func_arg_list: func_arg_list COMMA • func_arg

    MUT  shift, and go to state 12

    $default  reduce using rule 26 (opt_mut)

    func_arg  go to state 74
    opt_mut   go to state 16


State 21

    7 func_decl_args: LPAREN func_arg_list RPAREN •

    $default  reduce using rule 7 (func_decl_args)


State 22

   12 func_arg: opt_mut IDENTIFIER • COLON type

    COLON  shift, and go to state 75


State 23

   35 type: I8 •

    $default  reduce using rule 35 (type)


State 24

   36 type: I16 •

    $default  reduce using rule 36 (type)


State 25

   37 type: I32 •

    $default  reduce using rule 37 (type)


State 26

   38 type: I64 •

    $default  reduce using rule 38 (type)


State 27

   39 type: ISIZE •

    $default  reduce using rule 39 (type)


State 28

   40 type: U8 •

    $default  reduce using rule 40 (type)


State 29

   41 type: U16 •

    $default  reduce using rule 41 (type)


State 30

   42 type: U32 •

    $default  reduce using rule 42 (type)


State 31

   43 type: U64 •

    $default  reduce using rule 43 (type)


State 32

   44 type: USIZE •

    $default  reduce using rule 44 (type)


State 33

   45 type: BOOL •

    $default  reduce using rule 45 (type)


State 34

   46 type: LPAREN • type_list RPAREN
   47     | LPAREN • RPAREN

    I8      shift, and go to state 23
    I16     shift, and go to state 24
    I32     shift, and go to state 25
    I64     shift, and go to state 26
    ISIZE   shift, and go to state 27
    U8      shift, and go to state 28
    U16     shift, and go to state 29
    U32     shift, and go to state 30
    U64     shift, and go to state 31
    USIZE   shift, and go to state 32
    BOOL    shift, and go to state 33
    LPAREN  shift, and go to state 34
    RPAREN  shift, and go to state 76

    type_list  go to state 77
    type       go to state 78


State 35

    5 function_decl: FN IDENTIFIER func_decl_args ARROW type • block_expr

    LBRACE  shift, and go to state 18

    block_expr  go to state 79


State 36

   74 literal: DEC_LITERAL •

    $default  reduce using rule 74 (literal)


State 37

   76 literal: FLOAT_LITERAL •

    $default  reduce using rule 76 (literal)


State 38

   75 literal: STR_LITERAL •

    $default  reduce using rule 75 (literal)


State 39

   77 literal: TRUE •

    $default  reduce using rule 77 (literal)


State 40

   78 literal: FALSE •

    $default  reduce using rule 78 (literal)


State 41

   81 call_expr: IDENTIFIER • LPAREN call_expr_args RPAREN
   82          | IDENTIFIER • LPAREN RPAREN
   97 expr_wo_block: IDENTIFIER •

    LPAREN  shift, and go to state 80

    $default  reduce using rule 97 (expr_wo_block)


State 42

   28 let: LET • opt_mut ident type_decl EQ expr SEMICOLON
   29    | LET • opt_mut ident type_decl SEMICOLON

    MUT  shift, and go to state 12

    $default  reduce using rule 26 (opt_mut)

    opt_mut  go to state 81


State 43

   83 while_expr: WHILE • expr block_expr

    DEC_LITERAL    shift, and go to state 36
    FLOAT_LITERAL  shift, and go to state 37
    STR_LITERAL    shift, and go to state 38
    TRUE           shift, and go to state 39
    FALSE          shift, and go to state 40
    IDENTIFIER     shift, and go to state 41
    WHILE          shift, and go to state 43
    BANG           shift, and go to state 45
    MINUS          shift, and go to state 46
    STAR           shift, and go to state 47
    IF             shift, and go to state 48
    RETURN         shift, and go to state 49
    BREAK          shift, and go to state 50
    CONTINUE       shift, and go to state 51
    LBRACE         shift, and go to state 18
    LPAREN         shift, and go to state 53
    AMPERSAND      shift, and go to state 55
    AMPERSAND_MUT  shift, and go to state 56

    if_expr           go to state 62
    block_expr        go to state 63
    unary_op_expr     go to state 64
    bin_op_expr       go to state 65
    literal           go to state 66
    call_expr         go to state 67
    while_expr        go to state 68
    tuple_index_expr  go to state 69
    expr              go to state 82
    expr_w_block      go to state 83
    expr_wo_block     go to state 84


State 44

   21 print_ln: PRINT_LN • LPAREN STR_LITERAL RPAREN

    LPAREN  shift, and go to state 85


State 45

   54 unary_op_expr: BANG • expr

    DEC_LITERAL    shift, and go to state 36
    FLOAT_LITERAL  shift, and go to state 37
    STR_LITERAL    shift, and go to state 38
    TRUE           shift, and go to state 39
    FALSE          shift, and go to state 40
    IDENTIFIER     shift, and go to state 41
    WHILE          shift, and go to state 43
    BANG           shift, and go to state 45
    MINUS          shift, and go to state 46
    STAR           shift, and go to state 47
    IF             shift, and go to state 48
    RETURN         shift, and go to state 49
    BREAK          shift, and go to state 50
    CONTINUE       shift, and go to state 51
    LBRACE         shift, and go to state 18
    LPAREN         shift, and go to state 53
    AMPERSAND      shift, and go to state 55
    AMPERSAND_MUT  shift, and go to state 56

    if_expr           go to state 62
    block_expr        go to state 63
    unary_op_expr     go to state 64
    bin_op_expr       go to state 65
    literal           go to state 66
    call_expr         go to state 67
    while_expr        go to state 68
    tuple_index_expr  go to state 69
    expr              go to state 86
    expr_w_block      go to state 83
    expr_wo_block     go to state 84


State 46

   52 unary_op_expr: MINUS • expr

    DEC_LITERAL    shift, and go to state 36
    FLOAT_LITERAL  shift, and go to state 37
    STR_LITERAL    shift, and go to state 38
    TRUE           shift, and go to state 39
    FALSE          shift, and go to state 40
    IDENTIFIER     shift, and go to state 41
    WHILE          shift, and go to state 43
    BANG           shift, and go to state 45
    MINUS          shift, and go to state 46
    STAR           shift, and go to state 47
    IF             shift, and go to state 48
    RETURN         shift, and go to state 49
    BREAK          shift, and go to state 50
    CONTINUE       shift, and go to state 51
    LBRACE         shift, and go to state 18
    LPAREN         shift, and go to state 53
    AMPERSAND      shift, and go to state 55
    AMPERSAND_MUT  shift, and go to state 56

    if_expr           go to state 62
    block_expr        go to state 63
    unary_op_expr     go to state 64
    bin_op_expr       go to state 65
    literal           go to state 66
    call_expr         go to state 67
    while_expr        go to state 68
    tuple_index_expr  go to state 69
    expr              go to state 87
    expr_w_block      go to state 83
    expr_wo_block     go to state 84


State 47

   53 unary_op_expr: STAR • expr

    DEC_LITERAL    shift, and go to state 36
    FLOAT_LITERAL  shift, and go to state 37
    STR_LITERAL    shift, and go to state 38
    TRUE           shift, and go to state 39
    FALSE          shift, and go to state 40
    IDENTIFIER     shift, and go to state 41
    WHILE          shift, and go to state 43
    BANG           shift, and go to state 45
    MINUS          shift, and go to state 46
    STAR           shift, and go to state 47
    IF             shift, and go to state 48
    RETURN         shift, and go to state 49
    BREAK          shift, and go to state 50
    CONTINUE       shift, and go to state 51
    LBRACE         shift, and go to state 18
    LPAREN         shift, and go to state 53
    AMPERSAND      shift, and go to state 55
    AMPERSAND_MUT  shift, and go to state 56

    if_expr           go to state 62
    block_expr        go to state 63
    unary_op_expr     go to state 64
    bin_op_expr       go to state 65
    literal           go to state 66
    call_expr         go to state 67
    while_expr        go to state 68
    tuple_index_expr  go to state 69
    expr              go to state 88
    expr_w_block      go to state 83
    expr_wo_block     go to state 84


State 48

   30 if_expr: IF • expr block_expr
   31        | IF • expr block_expr ELSE if_expr
   32        | IF • expr block_expr ELSE block_expr

    DEC_LITERAL    shift, and go to state 36
    FLOAT_LITERAL  shift, and go to state 37
    STR_LITERAL    shift, and go to state 38
    TRUE           shift, and go to state 39
    FALSE          shift, and go to state 40
    IDENTIFIER     shift, and go to state 41
    WHILE          shift, and go to state 43
    BANG           shift, and go to state 45
    MINUS          shift, and go to state 46
    STAR           shift, and go to state 47
    IF             shift, and go to state 48
    RETURN         shift, and go to state 49
    BREAK          shift, and go to state 50
    CONTINUE       shift, and go to state 51
    LBRACE         shift, and go to state 18
    LPAREN         shift, and go to state 53
    AMPERSAND      shift, and go to state 55
    AMPERSAND_MUT  shift, and go to state 56

    if_expr           go to state 62
    block_expr        go to state 63
    unary_op_expr     go to state 64
    bin_op_expr       go to state 65
    literal           go to state 66
    call_expr         go to state 67
    while_expr        go to state 68
    tuple_index_expr  go to state 69
    expr              go to state 89
    expr_w_block      go to state 83
    expr_wo_block     go to state 84


State 49

  101 expr_wo_block: RETURN • expr

    DEC_LITERAL    shift, and go to state 36
    FLOAT_LITERAL  shift, and go to state 37
    STR_LITERAL    shift, and go to state 38
    TRUE           shift, and go to state 39
    FALSE          shift, and go to state 40
    IDENTIFIER     shift, and go to state 41
    WHILE          shift, and go to state 43
    BANG           shift, and go to state 45
    MINUS          shift, and go to state 46
    STAR           shift, and go to state 47
    IF             shift, and go to state 48
    RETURN         shift, and go to state 49
    BREAK          shift, and go to state 50
    CONTINUE       shift, and go to state 51
    LBRACE         shift, and go to state 18
    LPAREN         shift, and go to state 53
    AMPERSAND      shift, and go to state 55
    AMPERSAND_MUT  shift, and go to state 56

    if_expr           go to state 62
    block_expr        go to state 63
    unary_op_expr     go to state 64
    bin_op_expr       go to state 65
    literal           go to state 66
    call_expr         go to state 67
    while_expr        go to state 68
    tuple_index_expr  go to state 69
    expr              go to state 90
    expr_w_block      go to state 83
    expr_wo_block     go to state 84


State 50

  102 expr_wo_block: BREAK • expr

    DEC_LITERAL    shift, and go to state 36
    FLOAT_LITERAL  shift, and go to state 37
    STR_LITERAL    shift, and go to state 38
    TRUE           shift, and go to state 39
    FALSE          shift, and go to state 40
    IDENTIFIER     shift, and go to state 41
    WHILE          shift, and go to state 43
    BANG           shift, and go to state 45
    MINUS          shift, and go to state 46
    STAR           shift, and go to state 47
    IF             shift, and go to state 48
    RETURN         shift, and go to state 49
    BREAK          shift, and go to state 50
    CONTINUE       shift, and go to state 51
    LBRACE         shift, and go to state 18
    LPAREN         shift, and go to state 53
    AMPERSAND      shift, and go to state 55
    AMPERSAND_MUT  shift, and go to state 56

    if_expr           go to state 62
    block_expr        go to state 63
    unary_op_expr     go to state 64
    bin_op_expr       go to state 65
    literal           go to state 66
    call_expr         go to state 67
    while_expr        go to state 68
    tuple_index_expr  go to state 69
    expr              go to state 91
    expr_w_block      go to state 83
    expr_wo_block     go to state 84


State 51

  103 expr_wo_block: CONTINUE •

    $default  reduce using rule 103 (expr_wo_block)


State 52

   51 block_expr: LBRACE RBRACE •

    $default  reduce using rule 51 (block_expr)


State 53

   94 expr_wo_block: LPAREN • expr RPAREN
   99              | LPAREN • RPAREN
  104              | LPAREN • expr_list opt_comma RPAREN

    DEC_LITERAL    shift, and go to state 36
    FLOAT_LITERAL  shift, and go to state 37
    STR_LITERAL    shift, and go to state 38
    TRUE           shift, and go to state 39
    FALSE          shift, and go to state 40
    IDENTIFIER     shift, and go to state 41
    WHILE          shift, and go to state 43
    BANG           shift, and go to state 45
    MINUS          shift, and go to state 46
    STAR           shift, and go to state 47
    IF             shift, and go to state 48
    RETURN         shift, and go to state 49
    BREAK          shift, and go to state 50
    CONTINUE       shift, and go to state 51
    LBRACE         shift, and go to state 18
    LPAREN         shift, and go to state 53
    RPAREN         shift, and go to state 92
    AMPERSAND      shift, and go to state 55
    AMPERSAND_MUT  shift, and go to state 56

    if_expr           go to state 62
    block_expr        go to state 63
    unary_op_expr     go to state 64
    bin_op_expr       go to state 65
    literal           go to state 66
    call_expr         go to state 67
    while_expr        go to state 68
    tuple_index_expr  go to state 69
    expr              go to state 93
    expr_list         go to state 94
    expr_w_block      go to state 83
    expr_wo_block     go to state 84


State 54

   13 stmt: SEMICOLON •

    $default  reduce using rule 13 (stmt)


State 55

   55 unary_op_expr: AMPERSAND • expr

    DEC_LITERAL    shift, and go to state 36
    FLOAT_LITERAL  shift, and go to state 37
    STR_LITERAL    shift, and go to state 38
    TRUE           shift, and go to state 39
    FALSE          shift, and go to state 40
    IDENTIFIER     shift, and go to state 41
    WHILE          shift, and go to state 43
    BANG           shift, and go to state 45
    MINUS          shift, and go to state 46
    STAR           shift, and go to state 47
    IF             shift, and go to state 48
    RETURN         shift, and go to state 49
    BREAK          shift, and go to state 50
    CONTINUE       shift, and go to state 51
    LBRACE         shift, and go to state 18
    LPAREN         shift, and go to state 53
    AMPERSAND      shift, and go to state 55
    AMPERSAND_MUT  shift, and go to state 56

    if_expr           go to state 62
    block_expr        go to state 63
    unary_op_expr     go to state 64
    bin_op_expr       go to state 65
    literal           go to state 66
    call_expr         go to state 67
    while_expr        go to state 68
    tuple_index_expr  go to state 69
    expr              go to state 95
    expr_w_block      go to state 83
    expr_wo_block     go to state 84


State 56

   56 unary_op_expr: AMPERSAND_MUT • expr

    DEC_LITERAL    shift, and go to state 36
    FLOAT_LITERAL  shift, and go to state 37
    STR_LITERAL    shift, and go to state 38
    TRUE           shift, and go to state 39
    FALSE          shift, and go to state 40
    IDENTIFIER     shift, and go to state 41
    WHILE          shift, and go to state 43
    BANG           shift, and go to state 45
    MINUS          shift, and go to state 46
    STAR           shift, and go to state 47
    IF             shift, and go to state 48
    RETURN         shift, and go to state 49
    BREAK          shift, and go to state 50
    CONTINUE       shift, and go to state 51
    LBRACE         shift, and go to state 18
    LPAREN         shift, and go to state 53
    AMPERSAND      shift, and go to state 55
    AMPERSAND_MUT  shift, and go to state 56

    if_expr           go to state 62
    block_expr        go to state 63
    unary_op_expr     go to state 64
    bin_op_expr       go to state 65
    literal           go to state 66
    call_expr         go to state 67
    while_expr        go to state 68
    tuple_index_expr  go to state 69
    expr              go to state 96
    expr_w_block      go to state 83
    expr_wo_block     go to state 84


State 57

   17 stmt: item •

    $default  reduce using rule 17 (stmt)


State 58

   20 stmt_list: stmt •

    $default  reduce using rule 20 (stmt_list)


State 59

   18 stmt_list: stmt_list • stmt
   19          | stmt_list • error
   48 block_expr: LBRACE stmt_list • RBRACE
   49           | LBRACE stmt_list • expr RBRACE

    error          shift, and go to state 97
    DEC_LITERAL    shift, and go to state 36
    FLOAT_LITERAL  shift, and go to state 37
    STR_LITERAL    shift, and go to state 38
    TRUE           shift, and go to state 39
    FALSE          shift, and go to state 40
    IDENTIFIER     shift, and go to state 41
    LET            shift, and go to state 42
    FN             shift, and go to state 1
    WHILE          shift, and go to state 43
    PRINT_LN       shift, and go to state 44
    BANG           shift, and go to state 45
    MINUS          shift, and go to state 46
    STAR           shift, and go to state 47
    IF             shift, and go to state 48
    RETURN         shift, and go to state 49
    BREAK          shift, and go to state 50
    CONTINUE       shift, and go to state 51
    LBRACE         shift, and go to state 18
    RBRACE         shift, and go to state 98
    LPAREN         shift, and go to state 53
    SEMICOLON      shift, and go to state 54
    AMPERSAND      shift, and go to state 55
    AMPERSAND_MUT  shift, and go to state 56

    item              go to state 57
    function_decl     go to state 5
    stmt              go to state 99
    print_ln          go to state 60
    let               go to state 61
    if_expr           go to state 62
    block_expr        go to state 63
    unary_op_expr     go to state 64
    bin_op_expr       go to state 65
    literal           go to state 66
    call_expr         go to state 67
    while_expr        go to state 68
    tuple_index_expr  go to state 69
    expr              go to state 100
    expr_stmt         go to state 71
    expr_w_block      go to state 72
    expr_wo_block     go to state 73


State 60

   16 stmt: print_ln • SEMICOLON

    SEMICOLON  shift, and go to state 101


State 61

   14 stmt: let •

    $default  reduce using rule 14 (stmt)


State 62

   92 expr_w_block: if_expr •

    $default  reduce using rule 92 (expr_w_block)


State 63

   93 expr_w_block: block_expr •

    $default  reduce using rule 93 (expr_w_block)


State 64

   98 expr_wo_block: unary_op_expr •

    $default  reduce using rule 98 (expr_wo_block)


State 65

   95 expr_wo_block: bin_op_expr •

    $default  reduce using rule 95 (expr_wo_block)


State 66

  105 expr_wo_block: literal •

    $default  reduce using rule 105 (expr_wo_block)


State 67

  100 expr_wo_block: call_expr •

    $default  reduce using rule 100 (expr_wo_block)


State 68

   91 expr_w_block: while_expr •

    $default  reduce using rule 91 (expr_w_block)


State 69

   96 expr_wo_block: tuple_index_expr •

    $default  reduce using rule 96 (expr_wo_block)


State 70

   50 block_expr: LBRACE expr • RBRACE
   57 bin_op_expr: expr • PLUS expr
   58            | expr • MINUS expr
   59            | expr • STAR expr
   60            | expr • SLASH expr
   61            | expr • L_AND expr
   62            | expr • L_OR expr
   63            | expr • EQEQ expr
   64            | expr • NE expr
   65            | expr • LT expr
   66            | expr • GT expr
   67            | expr • GE expr
   68            | expr • LE expr
   69            | expr • EQ expr
   70            | expr • PLUS_EQ expr
   71            | expr • MIN_EQ expr
   72            | expr • DIV_EQ expr
   73            | expr • MUL_EQ expr
   84 tuple_index_expr: expr • DOT DEC_LITERAL
